# turboswarm.github.io

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  mkdocs.yml  paper.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release-crates.yml  release-github.yml  release-pypi.yml
assets/: logo_gen.py
benches/: bench_suite.py  stats.py
benches/results/: meta.json  results.csv
crates/pso-core/: Cargo.toml  README.md
crates/pso-core/examples/: basic.rs  parallel.rs
crates/pso-core/src/: lib.rs  mopso.rs  params.rs  pso.rs  swarm.rs
crates/pso-core/src/benchmarks/: functions.rs
crates/pso-core/src/spaces/: continuous.rs  integer.rs  mixed.rs  mod.rs
crates/pso-core/src/topology/: global.rs  mod.rs  ring.rs
crates/pso-core/src/velocity/: constriction.rs  fips.rs  inertia.rs  mod.rs
crates/pso-core/tests/: convergence.rs
crates/pso-py/: Cargo.toml
crates/pso-py/src/: lib.rs
crates/turboswarm-core/: Cargo.toml  README.md
crates/turboswarm-core/examples/: basic.rs  parallel.rs
crates/turboswarm-core/src/: history.rs  lib.rs  mopso.rs  pso.rs  traits.rs
crates/turboswarm-core/src/benchmarks/: functions.rs  grey.rs  mod.rs
crates/turboswarm-core/src/spaces/: continuous.rs  grey.rs  mod.rs
crates/turboswarm-core/src/topology/: random.rs  von_neumann.rs
crates/turboswarm-core/src/velocity/: inertia.rs
crates/turboswarm-core/tests/: convergence.rs
docs/: architecture.md  comparison.md  extending.md  getting-started.md  index.md  installation.md
docs/api/: python.md  rust.md
docs/guide/: benchmarks.md  boundaries.md  constraints.md  grey.md  integer.md  integrations.md  multiobjective.md  sensitivity.md  topologies.md  variants.md  visualization.md
docs/javascripts/: mathjax.js
docs/tutorials/: constrained-optimization.md  hyperparameter-tuning.md  index.md  integer-mixed.md  multi-objective.md  pytorch-gradient-free.md  visualizing-convergence.md
examples/: demo_viz.py  quickstart.py  tour.py
notebooks/: 01_quickstart.ipynb  02_variants_and_topologies.ipynb  03_integer_mixed_constraints.ipynb  04_multiobjective.ipynb  05_grey_numbers.ipynb  README.md
paper/: .gitignore  README.md  refs.bib  turboswarm.tex
python/: README.md
python/turboswarm/: __init__.py  benchmarks.py  sensitivity.py  viz.py
python/turboswarm/integrations/: __init__.py  agents.py  optuna.py  pandas.py  parallel.py  scipy.py  sklearn.py
scripts/: bench_vs_libs.py  build-docs.sh  make_swarm_gif.py
tests/: test_integrations.py  test_turboswarm.py  test_viz.py
