[workspace]
resolver = "2"
members = [
    "crates/turboswarm-core",
    "crates/pso-py",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Jose L. Salmeron"]
repository = "https://github.com/turboswarm/turboswarm.github.io"
homepage = "https://github.com/turboswarm/turboswarm.github.io"

[workspace.dependencies]
rand = "0.8"
rand_chacha = "0.3"   # RNG with reproducible seed (reproducibility matters)
rayon = "1"           # data parallelism for parallel objective evaluation
