# Packaging with maturin (Rust core + Python layer).
# Development:  maturin develop --release
# Publishing:   maturin build --release  (generates wheels in target/wheels/)

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "turboswarm"
version = "0.3.0"
description = "Particle Swarm Optimization with a Rust core"
readme = "python/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jose L. Salmeron" }]
keywords = ["pso", "optimization", "swarm", "metaheuristics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://turboswarm.github.io"
Documentation = "https://turboswarm.github.io"
Repository = "https://github.com/turboswarm/turboswarm.github.io"
Issues = "https://github.com/turboswarm/turboswarm.github.io/issues"
Enterprise = "https://salmeron.cunef.edu"

[project.optional-dependencies]
notebooks = ["jupyter", "plotly"]
docs = ["mkdocs-material", "mkdocstrings[python]", "black"]
# Integrations (see turboswarm.integrations). Each is optional and lazily imported.
scipy = ["scipy"]
pandas = ["pandas"]
all = ["scipy", "pandas"]

[tool.maturin]
manifest-path = "crates/pso-py/Cargo.toml"
python-source = "python"
module-name = "turboswarm.turboswarm_native"
# Ship the LICENSE in the sdist too (the metadata declares License-File: LICENSE,
# which PyPI requires to be present in every distribution).
include = [{ path = "LICENSE", format = "sdist" }]
