[package]
name = "pso-core"
description = "Particle Swarm Optimization core: extensible and modular"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/pso-core"
keywords = ["pso", "optimization", "swarm", "metaheuristics"]
categories = ["science", "algorithms"]

[dependencies]
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true

[dev-dependencies]
# tests use only std + the crate itself
