[package]
name = "pso-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "turboswarm_native"
crate-type = ["cdylib"]

[dependencies]
pso-core = { path = "../pso-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"   # zero-copy NumPy arrays for the vectorized objective path
