[package]
name = "pso-py"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "turboswarm_native"
crate-type = ["cdylib"]

[dependencies]
turboswarm-core = { path = "../turboswarm-core" }
# abi3-py39: build a single wheel compatible with CPython >= 3.9.
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
numpy = "0.22"   # zero-copy NumPy arrays for the vectorized objective path
